# daisycloud-core

./: .gitignore  .gitreview  LICENSE  README.md  diff_coverage.py  groups  patch.py  project.config
code/daisy/: .coveragerc  .stestr.conf  .testr.conf  AUTHORS  CONTRIBUTING.rst  ChangeLog  HACKING.rst  MANIFEST.in  PKG-INFO  README.rst  openstack-common.conf  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini  unittest_install.sh
code/daisy/daisy/: context.py  gateway.py  i18n.py  listener.py  location.py  notifier.py  opts.py  schema.py  scrubber.py  service.py  test.py  version.py
code/daisy/daisy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  pbr.json  requires.txt
code/daisy/daisy/api/: __init__.py  authorization.py  cached_images.py  common.py  network_api.py  policy.py  property_protections.py  versions.py
code/daisy/daisy/api/backends/: common.py  driver.py  os.py
code/daisy/daisy/api/configset/: clush.py  manager.py
code/daisy/daisy/api/middleware/: cache.py  cache_manage.py  context.py  gzip.py  version_negotiation.py
code/daisy/daisy/api/v1/: __init__.py  backend_types.py  backup_restore.py  clusters.py  components.py  config_files.py  config_sets.py  config_update.py  configs.py  controller.py  deploy_server.py  disk_array.py  host_template.py  hosts.py  hwms.py  images.py  install.py  members.py  networks.py  roles.py  router.py  services.py  template.py  template_configs.py  template_funcs.py  template_services.py  upload_utils.py  version_patchs.py  versions.py
code/daisy/daisy/api/v2/: image_actions.py  image_data.py  image_members.py  image_tags.py  images.py  metadef_namespaces.py  metadef_objects.py  metadef_properties.py  metadef_resource_types.py  metadef_tags.py  router.py  schemas.py  tasks.py
code/daisy/daisy/artifacts/: __init__.py
code/daisy/daisy/async/: __init__.py  taskflow_executor.py  utils.py
code/daisy/daisy/async/flows/: base_import.py  convert.py  introspect.py
code/daisy/daisy/auto_backup/: manager.py
code/daisy/daisy/cmd/: __init__.py  agent_notification.py  api.py  auto_backup.py  cache_cleaner.py  cache_manage.py  cache_prefetcher.py  cache_pruner.py  control.py  index.py  manage.py  orchestration.py  registry.py  replicator.py  scrubber.py  search.py
code/daisy/daisy/common/: .config.py.swp  auth.py  client.py  config.py  crypt.py  exception.py  jsonpatchvalidator.py  loggers.py  property_utils.py  rpc.py  semver_db.py  store_utils.py  swift_store_utils.py  utils.py  vcpu_pin.py  vcpu_pin_dpdk.py  wsgi.py  wsme_utils.py
code/daisy/daisy/common/artifacts/: declarative.py  definitions.py  loader.py  serialization.py
code/daisy/daisy/common/location_strategy/: __init__.py  store_type.py
code/daisy/daisy/db/: __init__.py  metadata.py  migration.py
code/daisy/daisy/domain/: __init__.py
code/daisy/daisy/image_cache/: __init__.py  base.py  cleaner.py  client.py  prefetcher.py  pruner.py
code/daisy/daisy/locale/: glance-log-critical.pot  glance-log-error.pot  glance-log-info.pot  glance-log-warning.pot  glance.pot
code/daisy/daisy/orchestration/: driver.py  manager.py
code/daisy/daisy/quota/: __init__.py
code/daisy/daisy/registry/: __init__.py
code/daisy/daisy/search/: __init__.py
code/daisy/daisy/tests/: conf_fixture.py  fake_log.py  fake_notifier.py  test_migrations.py  test_utils.py
code/daisy/doc/source/: conf.py  index.rst
code/daisy/etc/: daisy-api-paste.ini  daisy-api.conf  daisy-auto-backup.conf  daisy-cache.conf  daisy-manage.conf  daisy-orchestration.conf  daisy-registry-paste.ini  daisy-registry.conf  daisy-scrubber.conf  daisy-search.conf
code/daisy/etc/oslo-config-generator/: daisy-api.conf  daisy-cache.conf  daisy-manage.conf  daisy-registry.conf  daisy-scrubber.conf
code/daisy/tools/: install_venv.py
doc/: api.txt  (+5 more)
(+977 files in other folders)
