[metadata]
name = daisy
summary = OpenStack Image Service
description-file = 
	README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier = 
	Environment :: OpenStack
	Intended Audience :: Information Technology
	Intended Audience :: System Administrators
	License :: OSI Approved :: Apache Software License
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7

[global]
setup-hooks = 
	pbr.hooks.setup_hook

[entry_points]
console_scripts = 
	daisy-api = daisy.cmd.api:main
	daisy-manage = daisy.cmd.manage:main
	daisy-registry = daisy.cmd.registry:main
	daisy-orchestration = daisy.cmd.orchestration:main
oslo_config.opts = 
	daisy.api = daisy.opts:list_api_opts
	daisy.registry = daisy.opts:list_registry_opts
	daisy.manage = daisy.opts:list_manage_opts
daisy.database.migration_backend = 
	sqlalchemy = oslo_db.sqlalchemy.migration

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[compile_catalog]
directory = daisy/locale
domain = daisy

[update_catalog]
domain = daisy
output_dir = daisy/locale
input_file = daisy/locale/daisy.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = daisy/locale/daisy.pot

